--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.3",
     "express-rate-limit": "^7.2.0",
     "express-session": "^1.18.1",
+    "fuse.js": "^7.1.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
