--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "video-surf-backend",
   "version": "1.0.0",
-  "description": "Backend for Video Surfing website",
+  "description": "Backend for XFansTube website",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
