--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
-    "canvas": "^3.1.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -23,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0",
+    "playwright": "^1.53.1",
     "useragent": "^2.3.0",
     "validator": "^13.11.0"
   },
