--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,5 +1,5 @@
-# Multi-stage build for React app
-FROM node:18-alpine as build
+# Use Node.js 18 for development
+FROM node:18-alpine
 
 # Set working directory
 WORKDIR /app
@@ -7,44 +7,15 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
+# Install dependencies.
+# ci Short for “Clean Install”
+# --silent	Hides logs/output (makes Docker build cleaner)
 RUN npm ci --silent
 
 # Copy source code
 COPY . .
 
-# Build the app
-RUN npm run build
+EXPOSE 3000
 
-# Production stage with Nginx
-FROM nginx:alpine
-
-# Copy custom nginx config
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-# Copy built app from build stage
-COPY --from=build /app/build /usr/share/nginx/html
-
-# Create non-root user
-RUN addgroup -g 1001 -S nginx
-RUN adduser -S nginx -u 1001
-
-# Change ownership
-RUN chown -R nginx:nginx /usr/share/nginx/html
-RUN chown -R nginx:nginx /var/cache/nginx
-RUN chown -R nginx:nginx /var/log/nginx
-RUN chown -R nginx:nginx /etc/nginx/conf.d
-RUN touch /var/run/nginx.pid
-RUN chown -R nginx:nginx /var/run/nginx.pid
-
-USER nginx
-
-# Expose port
-EXPOSE 80
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD curl -f http://localhost/ || exit 1
-
-# Start Nginx
-CMD ["nginx", "-g", "daemon off;"]
+# Run in development mode
+CMD ["npm", "start"]
