--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,27 @@ version: '3.8'
 
 services:
   # MongoDB Database
-  mongodb:
-    image: mongo:7.0
-    container_name: video-surfing-mongodb
-    restart: unless-stopped
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME:-admin}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD:-password123}
-      MONGO_INITDB_DATABASE: ${MONGO_DB_NAME:-video-surfing}
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongodb_data:/data/db
-      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
-    networks:
-      - video-surfing-network
-    healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+  # mongodb:
+  #   image: mongo:7.0
+  #   container_name: video-surfing-mongodb
+  #   restart: unless-stopped
+  #   environment:
+  #     MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME:-admin}
+  #     MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD:-password123}
+  #     MONGO_INITDB_DATABASE: ${MONGO_DB_NAME:-video-surfing}
+  #   ports:
+  #     - "27017:27017"
+  #   volumes:
+  #     - mongodb_data:/data/db
+  #     - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+  #   networks:
+  #     - video-surfing-network
+  #   healthcheck:
+  #     test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
+  #     interval: 30s
+  #     timeout: 10s
+  #     retries: 3
+  #     start_period: 40s
 
   # Backend API
   backend:
@@ -38,18 +38,18 @@ services:
       JWT_SECRET: ${JWT_SECRET:-your-super-secure-jwt-secret-change-in-production}
       JWT_EXPIRES_IN: ${JWT_EXPIRES_IN:-90d}
     ports:
-      - "5001:5001"
+      - "5000:5000"
     depends_on:
       mongodb:
         condition: service_healthy
     networks:
       - video-surfing-network
-    healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://localhost:5001/api/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+    # healthcheck:
+    #   test: ["CMD", "node", "-e", "require('http').get('http://localhost:5000/api/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
+    #   start_period: 40s
 
   # Frontend React App
   frontend:
@@ -57,7 +57,7 @@ services:
       context: ./Frontend
       dockerfile: Dockerfile
       args:
-        REACT_APP_API_URL: ${REACT_APP_API_URL:-http://localhost:5001/api}
+        REACT_APP_API_URL: ${REACT_APP_API_URL:-http://localhost:5000/api}
         REACT_APP_DEFAULT_THUMBNAIL: ${REACT_APP_DEFAULT_THUMBNAIL:-https://via.placeholder.com/640x360}
     container_name: video-surfing-frontend
     restart: unless-stopped
@@ -68,12 +68,12 @@ services:
         condition: service_healthy
     networks:
       - video-surfing-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+    # healthcheck:
+    #   test: ["CMD", "curl", "-f", "http://localhost/health"]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
+    #   start_period: 40s
 
   # Nginx Reverse Proxy (Optional - for production)
   nginx:
